feat: adicionado o fluxo de preparaçã ode imagens para video